--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,4 +47,9 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/EngineSettings.GameMapsSettings]
+GameInstanceClass=/Game/Blueprints/Core/GI_Lander.GI_Lander_C
+GlobalDefaultGameMode=/Game/Blueprints/Core/GM_Campaign.GM_Campaign_C
+EditorStartupMap=/Game/Maps/Test.Test
+GameDefaultMap=/Game/Maps/Test.Test
 
