--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,7 +73,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Maps/Test
+MRUItem0=/Game/Maps/Map_Menu
+MRUItem1=/Game/Maps/Test2
+MRUItem2=/Game/Maps/Test1
+MRUItem3=/Game/Maps/Test
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -149,12 +152,18 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,In
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Menu,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Thrust Up,InputSettings.Bindings.ActionMappings.Thrust Down,InputSettings.Bindings.AxisMappings.Thrust,InputSettings.Bindings.AxisMappings.Roll,
 StaticMesh=StaticMesh.LOD0.MeshReductionSettings,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,
+GI_Lander_C=ArrayProperty.DefaultValueCategory.None,
+Save_Lander_C=ArrayProperty.DefaultValueCategory.None,
+K2Node_VariableSet=
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,
 
 [EditorStartup]
-LastLevel=/Game/Maps/Test
+LastLevel=/Game/Maps/Map_Menu
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -488,32 +497,247 @@ BoxComponent.Tags=True
 BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
+Class_LandingPad_C.Default=True
+Class_LandingPadEnd_C.Tick=True
+Class_LandingPadEnd_C.Default=True
+Class_LandingPadEnd_C.Rendering=True
+Class_LandingPadEnd_C.Replication=True
+Class_LandingPadEnd_C.Input=True
+Class_LandingPadEnd_C.Actor=True
+GM_ReachThePoint_C.Tick=True
+GM_ReachThePoint_C.Classes=True
+GM_ReachThePoint_C.Game=True
+GM_ReachThePoint_C.GameMode=True
+GM_Cam_C.Tick=True
+GM_Cam_C.Classes=True
+GM_Cam_C.Game=True
+GM_Cam_C.GameMode=True
+GM_Campaign_C.Tick=True
+GM_Campaign_C.Classes=True
+GM_Campaign_C.Game=True
+GM_Campaign_C.GameMode=True
+NameProperty.Variable=True
+NameProperty.DefaultValueCategory=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+Class_LandingPadFuel_C.Tick=True
+Class_LandingPadFuel_C.Default=True
+Class_LandingPadFuel_C.Rendering=True
+Class_LandingPadFuel_C.Replication=True
+Class_LandingPadFuel_C.Input=True
+Class_LandingPadFuel_C.Actor=True
+Class_LandingPadEnd_C.TransformCommon=True
+MaterialExpressionCosine.MaterialExpressionCosine=True
+MaterialExpressionCosine.MaterialExpression=True
+MaterialExpressionTangent.MaterialExpressionTangent=True
+MaterialExpressionTangent.MaterialExpression=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Target Layers=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+MenuCam_C.Tick=True
+MenuCam_C.Pawn=True
+MenuCam_C.Camera=True
+MenuCam_C.Rendering=True
+MenuCam_C.Replication=True
+MenuCam_C.Input=True
+MenuCam_C.Actor=True
+MenuCam_C.TransformCommon=True
+DumbyLander_C.Tick=True
+DumbyLander_C.Rendering=True
+DumbyLander_C.Replication=True
+DumbyLander_C.Input=True
+DumbyLander_C.Actor=True
+DumbyLander_C.TransformCommon=True
+Map_Menu_C.Tick=True
+Map_Menu_C.Replication=True
+Map_Menu_C.Input=True
+Map_Menu_C.Actor=True
+UMG_MainMenu_C.Appearance=True
+UMG_MainMenu_C.Designer=True
+UMG_MainMenu_C.Input=True
+UMG_MainMenu_C.Interaction=True
+UMG_MainMenu_C.Layout=True
+UMG_MainMenu_C.Behavior=True
+UMG_MainMenu_C.Render Transform=True
+UMG_MainMenu_C.Performance=True
+UMG_MainMenu_C.Clipping=True
+UMG_MainMenu_C.Navigation=True
+CanvasPanel.Layout=True
+GridPanel.Layout=True
+GridPanel.Fill Rules=True
+GridPanel.Behavior=True
+GridPanel.Render Transform=True
+GridPanel.Performance=True
+GridPanel.Clipping=True
+GridPanel.Navigation=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Events=True
+CheckBox.Layout=True
+CheckBox.Appearance=True
+CheckBox.Style=True
+CheckBox.Interaction=True
+CheckBox.Behavior=True
+CheckBox.Render Transform=True
+CheckBox.Performance=True
+CheckBox.Clipping=True
+CheckBox.Navigation=True
+CheckBox.Events=True
+UMG_LevelElement_C.Appearance=True
+UMG_LevelElement_C.Designer=True
+UMG_LevelElement_C.Input=True
+UMG_LevelElement_C.Interaction=True
+UMG_LevelElement_C.Layout=True
+UMG_LevelElement_C.Behavior=True
+UMG_LevelElement_C.Render Transform=True
+UMG_LevelElement_C.Performance=True
+UMG_LevelElement_C.Clipping=True
+UMG_LevelElement_C.Navigation=True
+GI_Lander_C.Default=True
+Save_Lander_C.Default=True
+UniformGridPanel.Layout=True
+UniformGridPanel.Child Layout=True
+UniformGridPanel.Behavior=True
+UniformGridPanel.Render Transform=True
+UniformGridPanel.Performance=True
+UniformGridPanel.Clipping=True
+UniformGridPanel.Navigation=True
+WrapBox.Layout=True
+WrapBox.Content Layout=True
+WrapBox.Behavior=True
+WrapBox.Render Transform=True
+WrapBox.Performance=True
+WrapBox.Clipping=True
+WrapBox.Navigation=True
+Class_LandingPadFuel_C.TransformCommon=True
+UMG_LevelElement_C.Default=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+StaticMesh=
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
+BackgroundBlur="\"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
+TextBlock="\"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+UMG_MainMenu_C="\"Object.Render Transform.RenderTransform\" "
+UserWidget=
+GridPanel="\"Object.Render Transform.RenderTransform\" "
+Border="\"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" "
+CheckBox="\"Object.Render Transform.RenderTransform\" "
+UMG_LevelElement_C=
+GI_Lander_C=
+GameInstance=
+Save_Lander_C="\"Object.\" \"Object.\" "
+SaveGame="\"Object.\" \"Object.\" "
+UniformGridPanel="\"Object.Render Transform.RenderTransform\" "
+WrapBox="\"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/ZonesAndVolumes/Class_LandingPad.Class_LandingPad;
+RecentlyPlaced=/Game/Blueprints/Lander/DumbyLander.DumbyLander;/Engine/Transient.ActorFactoryBlueprint_0
+RecentlyPlaced=/Game/Blueprints/Lander/MenuCam.MenuCam;
+RecentlyPlaced=/Game/Blueprints/ZonesAndVolumes/Class_LandingPadEnd.Class_LandingPadEnd;
 RecentlyPlaced=/Game/Blueprints/Lander/Class_Lander.Class_Lander;
+RecentlyPlaced=/Game/Mesh/CrapLander.CrapLander;
+RecentlyPlaced=/Game/Blueprints/ZonesAndVolumes/Class_LandingPadFuel.Class_LandingPadFuel;
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Lander/Class_Lander.Class_Lander=1
 /Game/Mesh/CrapLander.CrapLander=1
 /Game/Blueprints/ZonesAndVolumes/Class_LandingPad.Class_LandingPad=1
 /Game/Materials/Mat_Zone.Mat_Zone=1
+/Game/Blueprints/ZonesAndVolumes/Class_LandingPadEnd.Class_LandingPadEnd=1
+/Game/Blueprints/Core/GM_Cam.GM_Cam=1
+/Game/Blueprints/Core/Save_Lander.Save_Lander=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/Blueprints/Core/GM_campaign.GM_Campaign=1
+/Game/Blueprints/Core/GI_Lander.GI_Lander=1
+/Game/Blueprints/ZonesAndVolumes/Class_LandingPadFuel.Class_LandingPadFuel=1
+/Game/Materials/Mat_Zone_End.Mat_Zone_End=1
+/Game/Materials/Mat_Zone_Fuel.Mat_Zone_Fuel=1
+/Game/Materials/Mat_Chrome.Mat_Chrome=1
+/Game/Widgets/UMG_MainMenu.UMG_MainMenu=1
+/Game/Blueprints/Lander/DumbyLander.DumbyLander=1
+/Game/Blueprints/Lander/MenuCam.MenuCam=1
+/Game/Maps/Map_Menu.Map_Menu:PersistentLevel.Map_Menu=1
+/Game/Widgets/UMG_LevelElement.UMG_LevelElement=1
+/Game/Widgets/UMG_LevelMenu.UMG_LevelMenu=1
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
+GridPanel.Behavior=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -596,7 +820,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/ZonesAndVolumes
+ContentBrowserTab1.SelectedPaths=/Game/Widgets
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -637,7 +861,7 @@ GenericOpen=F:/GitHub/MoonLander/Content/
 GenericSave=F:/GitHub/MoonLander/Content/
 MeshImportExport=F:/GitHub/MoonLander/Content/
 WorldRoot=F:/GitHub/MoonLander/Content/
-Level=F:/GitHub/MoonLander/Content/
+Level=F:/GitHub/MoonLander/Content/Maps
 Project=C:/Program Files/Epic Games/UE_4.19/
 
 [ModuleFileTracking]
@@ -1225,5 +1449,42 @@ MovieSceneCapture.TimeStamp=2018.05.02-06.12.34
 MovieSceneCapture.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.05.02-06.12.38
 StaticMeshEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.05.02-06.12.37
+SequencerWidgets.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2018.05.02-06.12.34
+NewLevelDialog.LastCompileMethod=Unknown
+
+[LandscapeEdit]
+ToolStrength=0.100000
+BrushRadius=700.000000
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[WidgetTemplatesExpanded]
+Common=False
+Extra=False
+Input=False
+Optimization=True
+Panel=True
+Primitive=False
+Special Effects=True
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
 
 
